[gd_scene load_steps=17 format=3 uid="uid://3lmlrsbbacm"]

[ext_resource type="Script" uid="uid://dwi42apo3altc" path="res://apps/supply_chain_modeling/rsct.gd" id="1_xuhcs"]
[ext_resource type="Script" uid="uid://b6qabjmm3e73a" path="res://apps/supply_chain_modeling/ui/widgets/menu_bar.gd" id="2_74p8c"]
[ext_resource type="Script" uid="uid://d2ye6nkbx7e41" path="res://apps/supply_chain_modeling/simulation/simulation.gd" id="2_n8njg"]
[ext_resource type="Theme" uid="uid://hve1e7mnexbi" path="res://themes/theme.tres" id="2_xuhcs"]
[ext_resource type="PackedScene" uid="uid://baib0y8cocg71" path="res://apps/supply_chain_modeling/ui/widgets/wallet_connect_button.tscn" id="2_y60tv"]
[ext_resource type="Script" uid="uid://2iqtet5emwql" path="res://apps/supply_chain_modeling/ui/widgets/property_editor.gd" id="3_6bj1w"]
[ext_resource type="Script" uid="uid://cijykw5hf0uxe" path="res://apps/supply_chain_modeling/ui/widgets/sim_time_label.gd" id="4_jmsaq"]
[ext_resource type="Script" uid="uid://f416bgd5lfxn" path="res://apps/supply_chain_modeling/ui/widgets/graph_edit.gd" id="6_6a4jx"]
[ext_resource type="Script" uid="uid://bvu1h6it8sasj" path="res://apps/supply_chain_modeling/ui/widgets/new_nodes_menu.gd" id="7_jmsaq"]
[ext_resource type="PackedScene" uid="uid://d4mxgvknls7ob" path="res://apps/supply_chain_modeling/ui/widgets/resource_editor.tscn" id="10_hnv65"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hover"]
content_margin_left = 24.0
content_margin_top = 16.0
content_margin_right = 24.0
content_margin_bottom = 16.0
bg_color = Color(0.15, 0.17, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.32, 0.35, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
content_margin_left = 24.0
content_margin_top = 16.0
content_margin_right = 24.0
content_margin_bottom = 16.0
bg_color = Color(0.12, 0.14, 0.17, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.22, 0.25, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pressed"]
content_margin_left = 24.0
content_margin_top = 16.0
content_margin_right = 24.0
content_margin_bottom = 16.0
bg_color = Color(0.08, 0.1, 0.13, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.22, 0.25, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
content_margin_left = 32.0
content_margin_top = 32.0
content_margin_right = 32.0
content_margin_bottom = 32.0
bg_color = Color(0.12, 0.14, 0.17, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.22, 0.25, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 12

[sub_resource type="Theme" id="Theme_t31qw"]
resource_local_to_scene = true
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_pressed_color = Color(0.75, 0.75, 0.75, 1)
Button/constants/h_separation = 12
Button/font_sizes/font_size = 20
Button/styles/hover = SubResource("StyleBoxFlat_hover")
Button/styles/normal = SubResource("StyleBoxFlat_normal")
Button/styles/pressed = SubResource("StyleBoxFlat_pressed")
Label/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Label/constants/line_spacing = 6
Label/font_sizes/font_size = 20
LineEdit/colors/font_color = Color(0.875, 0.875, 0.875, 1)
LineEdit/colors/font_placeholder_color = Color(0.5, 0.5, 0.5, 1)
LineEdit/constants/minimum_character_width = 4
LineEdit/font_sizes/font_size = 20
LineEdit/styles/focus = SubResource("StyleBoxFlat_hover")
LineEdit/styles/normal = SubResource("StyleBoxFlat_normal")
Panel/styles/panel = SubResource("StyleBoxFlat_panel")
TabContainer/colors/font_selected_color = Color(0.95, 0.95, 0.95, 1)
TabContainer/colors/font_unselected_color = Color(0.7, 0.7, 0.7, 1)
TabContainer/constants/side_margin = 16
TabContainer/font_sizes/font_size = 18
TabContainer/styles/tab_selected = SubResource("StyleBoxFlat_normal")
TabContainer/styles/tab_unselected = SubResource("StyleBoxFlat_hover")
Tree/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Tree/constants/h_separation = 8
Tree/constants/v_separation = 8
Tree/font_sizes/font_size = 18

[sub_resource type="Theme" id="Theme_eyak1"]
resource_local_to_scene = true
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_pressed_color = Color(0.75, 0.75, 0.75, 1)
Button/constants/h_separation = 12
Button/font_sizes/font_size = 20
Button/styles/hover = SubResource("StyleBoxFlat_hover")
Button/styles/normal = SubResource("StyleBoxFlat_normal")
Button/styles/pressed = SubResource("StyleBoxFlat_pressed")
Label/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Label/constants/line_spacing = 6
Label/font_sizes/font_size = 20
LineEdit/colors/font_color = Color(0.875, 0.875, 0.875, 1)
LineEdit/colors/font_placeholder_color = Color(0.5, 0.5, 0.5, 1)
LineEdit/constants/minimum_character_width = 4
LineEdit/font_sizes/font_size = 20
LineEdit/styles/focus = SubResource("StyleBoxFlat_hover")
LineEdit/styles/normal = SubResource("StyleBoxFlat_normal")
Panel/styles/panel = SubResource("StyleBoxFlat_panel")
TabContainer/colors/font_selected_color = Color(0.95, 0.95, 0.95, 1)
TabContainer/colors/font_unselected_color = Color(0.7, 0.7, 0.7, 1)
TabContainer/constants/side_margin = 16
TabContainer/font_sizes/font_size = 18
TabContainer/styles/tab_selected = SubResource("StyleBoxFlat_normal")
TabContainer/styles/tab_unselected = SubResource("StyleBoxFlat_hover")
Tree/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Tree/constants/h_separation = 8
Tree/constants/v_separation = 8
Tree/font_sizes/font_size = 18

[node name="RSCT" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_xuhcs")
script = ExtResource("1_xuhcs")

[node name="Simulation" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_n8njg")

[node name="UI" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_xuhcs")

[node name="MenuContainer" type="HBoxContainer" parent="UI"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_xuhcs")

[node name="MenuBar" type="MenuBar" parent="UI/MenuContainer"]
layout_mode = 2
script = ExtResource("2_74p8c")

[node name="FileMenu" type="PopupMenu" parent="UI/MenuContainer/MenuBar"]
title = "File"
size = Vector2i(134, 170)
item_count = 9
item_0/text = "New"
item_0/id = 0
item_1/id = 1
item_1/separator = true
item_2/text = "Save"
item_2/id = 2
item_3/text = "Load"
item_3/id = 3
item_4/id = 4
item_4/separator = true
item_5/text = "Save File"
item_5/id = 5
item_6/text = "Load File"
item_6/id = 6
item_7/id = 7
item_7/separator = true
item_8/text = "Return to Launcher"
item_8/id = 8

[node name="NFTMenu" type="PopupMenu" parent="UI/MenuContainer/MenuBar"]
size = Vector2i(104, 100)
item_count = 3
item_0/text = "Mint NFT"
item_0/id = 0
item_1/text = "Load NFT"
item_1/id = 1
item_2/text = "Show NFTs"
item_2/id = 2

[node name="VSeparator2" type="VSeparator" parent="UI/MenuContainer"]
layout_mode = 2

[node name="Extender" type="Control" parent="UI/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button7" type="Button" parent="UI/MenuContainer"]
layout_mode = 2
theme = ExtResource("2_xuhcs")
text = "Slower"

[node name="Button6" type="Button" parent="UI/MenuContainer"]
layout_mode = 2
theme = ExtResource("2_xuhcs")
text = "Play/Pause"

[node name="Button8" type="Button" parent="UI/MenuContainer"]
layout_mode = 2
theme = ExtResource("2_xuhcs")
text = "Faster"

[node name="SimTimeLabel" type="Label" parent="UI/MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_xuhcs")
text = "Sim Time: 0.0 minutes"
script = ExtResource("4_jmsaq")

[node name="WalletConnectButton" parent="UI/MenuContainer" instance=ExtResource("2_y60tv")]
layout_mode = 2
theme = SubResource("Theme_t31qw")

[node name="WorkingArea" type="HSplitContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_xuhcs")
split_offset = 2000

[node name="TabContainer" type="TabContainer" parent="UI/WorkingArea"]
layout_mode = 2
theme = ExtResource("2_xuhcs")
current_tab = 0
tabs_visible = false

[node name="GraphView" type="Control" parent="UI/WorkingArea/TabContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_xuhcs")
metadata/_tab_index = 0

[node name="GraphEdit" type="GraphEdit" parent="UI/WorkingArea/TabContainer/GraphView"]
unique_name_in_owner = true
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource("2_xuhcs")
scroll_offset = Vector2(-1768, -1016)
right_disconnects = true
connection_lines_thickness = 2.0
zoom = 2.0736
script = ExtResource("6_6a4jx")

[node name="NewNodesMenu" type="VBoxContainer" parent="UI/WorkingArea/TabContainer/GraphView"]
unique_name_in_owner = true
layout_mode = 2
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -54.5
offset_right = 182.0
offset_bottom = 127.5
grow_vertical = 2
size_flags_horizontal = 0
theme = ExtResource("2_xuhcs")
script = ExtResource("7_jmsaq")

[node name="Resources" type="Control" parent="UI/WorkingArea/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ResourceEditor" parent="UI/WorkingArea/TabContainer/Resources" instance=ExtResource("10_hnv65")]
layout_mode = 1
theme = SubResource("Theme_eyak1")

[node name="Inspector" type="VBoxContainer" parent="UI/WorkingArea"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme = ExtResource("2_xuhcs")

[node name="Tabs" type="TabContainer" parent="UI/WorkingArea/Inspector"]
layout_mode = 2
theme = ExtResource("2_xuhcs")
current_tab = 0

[node name="Properties" type="VBoxContainer" parent="UI/WorkingArea/Inspector/Tabs"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_xuhcs")
script = ExtResource("3_6bj1w")
metadata/_tab_index = 0

[node name="SaveDialog" type="FileDialog" parent="UI"]
unique_name_in_owner = true
theme = ExtResource("2_xuhcs")
access = 2
filters = PackedStringArray("*.json ; JSON Files")

[node name="LoadDialog" type="FileDialog" parent="UI"]
unique_name_in_owner = true
title = "Open a File"
theme = ExtResource("2_xuhcs")
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json ; JSON Files")

[node name="AutoSaveTimer" type="Timer" parent="."]
wait_time = 180.0
autostart = true

[connection signal="load_from_file_requested" from="UI/MenuContainer/MenuBar" to="." method="_on_load_from_file_requested"]
[connection signal="load_requested" from="UI/MenuContainer/MenuBar" to="." method="load_graph"]
[connection signal="new_graph_requested" from="UI/MenuContainer/MenuBar" to="." method="new_graph"]
[connection signal="save_requested" from="UI/MenuContainer/MenuBar" to="." method="save_graph"]
[connection signal="save_to_file_requested" from="UI/MenuContainer/MenuBar" to="." method="_on_save_to_file_requested"]
[connection signal="id_pressed" from="UI/MenuContainer/MenuBar/FileMenu" to="UI/MenuContainer/MenuBar" method="_on_file_menu_pressed"]
[connection signal="id_pressed" from="UI/MenuContainer/MenuBar/NFTMenu" to="UI/MenuContainer/MenuBar" method="_on_nft_menu_pressed"]
[connection signal="pressed" from="UI/MenuContainer/Button6" to="." method="toggle_simulation"]
[connection signal="connection_request" from="UI/WorkingArea/TabContainer/GraphView/GraphEdit" to="." method="_on_connection_request"]
[connection signal="delete_nodes_request" from="UI/WorkingArea/TabContainer/GraphView/GraphEdit" to="." method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="UI/WorkingArea/TabContainer/GraphView/GraphEdit" to="." method="_on_disconnection_request"]
[connection signal="end_node_move" from="UI/WorkingArea/TabContainer/GraphView/GraphEdit" to="." method="_on_node_moved"]
[connection signal="node_deselected" from="UI/WorkingArea/TabContainer/GraphView/GraphEdit" to="." method="_on_node_deselected"]
[connection signal="node_selected" from="UI/WorkingArea/TabContainer/GraphView/GraphEdit" to="." method="_on_node_selected"]
[connection signal="button_down" from="UI/WorkingArea/TabContainer/GraphView/NewNodesMenu" to="." method="_on_button_down"]
[connection signal="button_up" from="UI/WorkingArea/TabContainer/GraphView/NewNodesMenu" to="." method="_on_button_up"]
[connection signal="file_selected" from="UI/SaveDialog" to="." method="_on_save_dialog_file_selected"]
[connection signal="file_selected" from="UI/LoadDialog" to="." method="_on_load_dialog_file_selected"]
[connection signal="timeout" from="AutoSaveTimer" to="." method="_handle_autosave"]
